--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "export": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "deploy": "npm run build && gh-pages -d out"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.13.0",
@@ -64,6 +65,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.13.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
